# client-valence-ms-client

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ROUTING.md  USAGE.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: AZURE-BOT-SETUP.md  AZURE-BOT-TUTORIAL.md  api-design-explanation.md  api-reference.md  aws-deployment.md  email-teams-setup-request.md  index.html  jira-ticket-python-client.md  teams_webhook_setup_guide.html  teams_webhook_setup_guide.md  tickets.md  webhook-status-report.html
docs/common/: styles.css
docs/tickets/: DISCOVERY-TC-002-bot-framework-integration.md  EPIC-TC-000-ms-teams-client.md  TICKET-TC-001-bot-framework-migration.md
postman/: teams-agent-integration.postman_collection.json
postman/environments/: local.postman_environment.json
prompts/: best-practices.md
requirements/: base.txt  dev.txt  phase1.txt
scripts/: find_untested_code.py  setup.sh  start_dashboard.py
scripts/phase0/: msteams_client.py  run_all_endpoints.py  send_to_teams.py  start_mock_agent.py  start_mock_webhook.py  test_client.py
scripts/phase1/: __init__.py  send_notification.py  start_notifier_api.py
scripts/phase2/: start_receiver.py
src/: __init__.py  main.py
src/agent/: __init__.py  client.py  models.py
src/api/: __init__.py  bot_api.py  notifier_api.py  receiver_api.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/dashboard/: __init__.py  api.py
src/notifier/: __init__.py  channels.py  models.py  service.py
src/session/: __init__.py  store.py
src/teams/: __init__.py
tests/: conftest.py
tests/bot_framework/: __init__.py  test_bot.py
tests/common/: test_processor.py
tests/core/: test_config.py  test_exceptions.py
(+36 files in other folders)
